postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-logs
  labels:
    app: postgres-logs
spec:
  type: LoadBalancer
  selector:
    app: postgres-logs
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres
